quickstart/policy/local-a2a.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: agentic-net-gateway
  # Envoy proxy should now end up here....
  namespace: team1
spec:
  gatewayClassName: cloud-provider-kind
  listeners:
    - protocol: HTTP
      port: 10001
      name: agentic-net-gateway-listener2
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-local-mcp
  namespace: team1
spec:
  parentRefs:
    - name: agentic-net-gateway
      namespace: team1
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /local/mcp
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /mcp
      backendRefs:
        - name: local-mcp-backend # local mcp backend running in the Kubernetes cluster
          group: agentic.prototype.x-k8s.io
          kind: XBackend
          namespace: team1
